Updated download properties dialog pages
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@7509 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/shareaza/Shareaza.rc
+++ b/shareaza/Shareaza.rc
@@ -1621,7 +1621,7 @@ BEGIN
 END
 
 IDD_DOWNLOAD_EDIT DIALOGEX 0, 0, 300, 220
-STYLE DS_SETFONT | DS_MODALFRAME | DS_3DLOOK | WS_POPUP | WS_CAPTION | WS_SYSMENU
+STYLE DS_SETFONT | DS_3DLOOK | WS_CHILD | WS_DISABLED | WS_CAPTION
 CAPTION "Download Properties"
 FONT 8, "Tahoma", 0, 0, 0x1
 BEGIN
@@ -1639,10 +1639,10 @@ BEGIN
     EDITTEXT        IDC_URN_BTH,61,194,207,12,ES_AUTOHSCROLL
     CONTROL         "",IDC_TRUST_BTH,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,276,195,10,8
     LTEXT           "WARNING: This dialog provides advanced download editing features for power users which if used incorrectly can and probably will cause corruption.",IDC_STATIC,7,7,286,18
-    GROUPBOX        "Filename and Si&ze:",IDC_STATIC,7,28,286,69,WS_GROUP
+    GROUPBOX        "Filename and Si&ze:",IDC_STATIC,7,28,286,69
     LTEXT           "Filename:",IDC_STATIC,14,41,64,10
     RTEXT           "File size (Byte):",IDC_STATIC,14,60,206,11
-    GROUPBOX        "&URNs:",IDC_STATIC,7,100,286,113,WS_GROUP
+    GROUPBOX        "&URNs:",IDC_STATIC,7,100,286,113
     RTEXT           "Trusted",IDC_STATIC,14,109,272,11
     LTEXT           "SHA1:",IDC_STATIC,14,122,45,12,SS_CENTERIMAGE
     LTEXT           "Tiger-Root:",IDC_STATIC,14,140,45,12,SS_CENTERIMAGE
@@ -1822,7 +1822,7 @@ BEGIN
 END
 
 IDD_TORRENT_GENERAL DIALOGEX 0, 0, 300, 220
-STYLE DS_SETFONT | DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
+STYLE DS_SETFONT | DS_3DLOOK | WS_CHILD | WS_DISABLED | WS_CAPTION
 CAPTION "Download Properties"
 FONT 8, "Tahoma", 0, 0, 0x1
 BEGIN
@@ -1845,7 +1845,7 @@ BEGIN
 END
 
 IDD_TORRENT_TRACKERS DIALOGEX 0, 0, 300, 220
-STYLE DS_SETFONT | DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
+STYLE DS_SETFONT | DS_3DLOOK | WS_CHILD | WS_DISABLED | WS_CAPTION
 CAPTION "Download Properties"
 FONT 8, "Tahoma", 0, 0, 0x1
 BEGIN
@@ -1863,7 +1863,7 @@ BEGIN
 END
 
 IDD_TORRENT_FILES DIALOGEX 0, 0, 300, 220
-STYLE DS_SETFONT | DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
+STYLE DS_SETFONT | DS_3DLOOK | WS_CHILD | WS_DISABLED | WS_CAPTION
 CAPTION "Download Properties"
 FONT 8, "Tahoma", 0, 0, 0x1
 BEGIN
@@ -1879,8 +1879,8 @@ BEGIN
     CONTROL         "",IDC_ASSOCIATIONS,"SysListView32",LVS_REPORT | LVS_SINGLESEL | LVS_SORTASCENDING | LVS_ALIGNLEFT | LVS_NOCOLUMNHEADER | WS_BORDER | WS_TABSTOP,19,7,60,112,WS_EX_CLIENTEDGE
 END
 
-IDD_DOWNLOAD_ACTIONS DIALOGEX 0, 0, 300, 220
-STYLE DS_SETFONT | DS_MODALFRAME | DS_3DLOOK | WS_POPUP | WS_CAPTION | WS_SYSMENU
+IDD_DOWNLOAD_ACTIONS DIALOGEX 0, 0, 300, 222
+STYLE DS_SETFONT | DS_3DLOOK | WS_CHILD | WS_DISABLED | WS_CAPTION
 CAPTION "Download Properties"
 FONT 8, "Tahoma", 0, 0, 0x1
 BEGIN
@@ -1892,8 +1892,8 @@ BEGIN
     EDITTEXT        IDC_ERASE_FROM,74,194,65,12,ES_AUTOHSCROLL
     EDITTEXT        IDC_ERASE_TO,164,194,65,12,ES_AUTOHSCROLL
     PUSHBUTTON      "Erase",IDC_ERASE,236,193,50,14
-    GROUPBOX        "&Actions:",IDC_STATIC,7,28,286,147,WS_GROUP
-    GROUPBOX        "Data &Eraser:",IDC_STATIC,7,180,286,33,WS_GROUP
+    GROUPBOX        "&Actions:",IDC_STATIC,7,28,286,147
+    GROUPBOX        "Data &Eraser:",IDC_STATIC,7,182,286,33
     LTEXT           "Byte range:",IDC_STATIC,14,194,57,12,SS_CENTERIMAGE
     CTEXT           "to",IDC_STATIC,141,192,21,12,SS_CENTERIMAGE
     LTEXT           "WARNING: This dialog provides advanced download editing features for power users which if used incorrectly can and probably will cause corruption.",IDC_STATIC,7,7,286,18
@@ -2624,7 +2624,7 @@ BEGIN
         VERTGUIDE, 14
         VERTGUIDE, 286
         TOPMARGIN, 7
-        BOTTOMMARGIN, 213
+        BOTTOMMARGIN, 215
         HORZGUIDE, 14
         HORZGUIDE, 206
     END
