--- a/Languages/tools/Updater/ShareazaDialogUpdater.csproj
+++ b/Languages/tools/Updater/ShareazaDialogUpdater.csproj
@@ -44,8 +44,17 @@
     <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
+    <Reference Include="System.Xml.Linq">
+      <RequiredTargetFramework>3.5</RequiredTargetFramework>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="XmlViewBox.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="XmlViewBox.Designer.cs">
+      <DependentUpon>XmlViewBox.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -71,6 +80,10 @@
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="XmlViewBox.resx">
+      <DependentUpon>XmlViewBox.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
     <Compile Include="Properties\Resources.Designer.cs">
