Enabled disabling G2 (added more warnings)
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@7561 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/shareaza/Shareaza.rc
+++ b/shareaza/Shareaza.rc
@@ -336,40 +336,40 @@ STYLE DS_SETFONT | WS_CHILD | WS_DISABLED | WS_CAPTION
 CAPTION "Gnutella"
 FONT 8, "Tahoma", 0, 0, 0x1
 BEGIN
-    GROUPBOX        "Gnutella2 Network:",IDC_STATIC,7,13,131,60,WS_GROUP
-    CONTROL         "Always connect to Gnutella2",IDC_G2_ALWAYS,"Button",BS_AUTO3STATE | WS_TABSTOP,10,25,127,8
+    CONTROL         "Always connect to Gnutella2",IDC_G2_ALWAYS,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,10,25,127,8
     CONTROL         "Connect to Gnutella2 today",IDC_G2_TODAY,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,10,38,127,8
-    LTEXT           "Mode: ",IDC_STATIC,16,56,55,8,0,WS_EX_RIGHT
     COMBOBOX        IDC_G2_CLIENTMODE,75,53,54,54,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
-    GROUPBOX        "G&2 Connections:",IDC_STATIC,7,84,131,75,WS_GROUP
-    LTEXT           "Leaf to Hub:",IDC_STATIC,18,95,65,12,SS_CENTERIMAGE
-    EDITTEXT        IDC_G2_HUBS,90,95,35,12,ES_AUTOHSCROLL | ES_NUMBER
-    CONTROL         "Spin1",IDC_G2_HUBS_SPIN,"msctls_updown32",UDS_SETBUDDYINT | UDS_ALIGNRIGHT | UDS_AUTOBUDDY | UDS_ARROWKEYS | UDS_NOTHOUSANDS,126,95,11,12
-    LTEXT           "Hub to Leaf:",IDC_STATIC,18,116,65,12,SS_CENTERIMAGE
-    EDITTEXT        IDC_G2_LEAFS,90,116,35,12,ES_AUTOHSCROLL | ES_NUMBER
-    CONTROL         "Spin1",IDC_G2_LEAFS_SPIN,"msctls_updown32",UDS_SETBUDDYINT | UDS_ALIGNRIGHT | UDS_AUTOBUDDY | UDS_ARROWKEYS | UDS_NOTHOUSANDS,126,116,11,12
-    LTEXT           "Hub to Hub:",IDC_STATIC,18,137,65,12,SS_CENTERIMAGE
-    EDITTEXT        IDC_G2_PEERS,90,137,35,12,ES_AUTOHSCROLL | ES_NUMBER
-    CONTROL         "Spin1",IDC_G2_PEERS_SPIN,"msctls_updown32",UDS_SETBUDDYINT | UDS_ALIGNRIGHT | UDS_AUTOBUDDY | UDS_ARROWKEYS | UDS_NOTHOUSANDS,126,137,11,12
-    GROUPBOX        "Gnutella1 Network:",IDC_STATIC,142,13,133,60,WS_GROUP
     CONTROL         "Always connect to Gnutella1",IDC_G1_ALWAYS,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,145,25,125,8
     CONTROL         "Connect to Gnutella1 today",IDC_G1_TODAY,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,145,38,125,8
-    LTEXT           "Mode: ",IDC_STATIC,150,55,56,8,0,WS_EX_RIGHT
     COMBOBOX        IDC_G1_CLIENTMODE,209,53,54,53,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
-    GROUPBOX        "G&1 Connections:",IDC_STATIC,142,84,133,75,WS_GROUP
-    LTEXT           "Leaf to Ultrapeer:",IDC_STATIC,160,95,65,12,SS_CENTERIMAGE
+    EDITTEXT        IDC_G2_HUBS,90,95,35,12,ES_AUTOHSCROLL | ES_NUMBER
+    CONTROL         "Spin1",IDC_G2_HUBS_SPIN,"msctls_updown32",UDS_SETBUDDYINT | UDS_ALIGNRIGHT | UDS_AUTOBUDDY | UDS_ARROWKEYS | UDS_NOTHOUSANDS,126,95,11,12
+    EDITTEXT        IDC_G2_LEAFS,90,116,35,12,ES_AUTOHSCROLL | ES_NUMBER
+    CONTROL         "Spin1",IDC_G2_LEAFS_SPIN,"msctls_updown32",UDS_SETBUDDYINT | UDS_ALIGNRIGHT | UDS_AUTOBUDDY | UDS_ARROWKEYS | UDS_NOTHOUSANDS,126,116,11,12
+    EDITTEXT        IDC_G2_PEERS,90,137,35,12,ES_AUTOHSCROLL | ES_NUMBER
+    CONTROL         "Spin1",IDC_G2_PEERS_SPIN,"msctls_updown32",UDS_SETBUDDYINT | UDS_ALIGNRIGHT | UDS_AUTOBUDDY | UDS_ARROWKEYS | UDS_NOTHOUSANDS,126,137,11,12
     EDITTEXT        IDC_G1_HUBS,230,95,35,12,ES_AUTOHSCROLL | ES_NUMBER
     CONTROL         "Spin1",IDC_G1_HUBS_SPIN,"msctls_updown32",UDS_SETBUDDYINT | UDS_ALIGNRIGHT | UDS_AUTOBUDDY | UDS_ARROWKEYS | UDS_NOTHOUSANDS,266,95,8,12
-    LTEXT           "Ultrapeer to Leaf:",IDC_STATIC,160,116,65,12,SS_CENTERIMAGE
     EDITTEXT        IDC_G1_LEAFS,230,116,35,12,ES_AUTOHSCROLL | ES_NUMBER
     CONTROL         "Spin1",IDC_G1_LEAFS_SPIN,"msctls_updown32",UDS_SETBUDDYINT | UDS_ALIGNRIGHT | UDS_AUTOBUDDY | UDS_ARROWKEYS | UDS_NOTHOUSANDS,266,116,8,12
-    LTEXT           "Peer to Peer:",IDC_STATIC,160,137,65,12,SS_CENTERIMAGE
     EDITTEXT        IDC_G1_PEERS,230,137,35,12,ES_AUTOHSCROLL | ES_NUMBER
     CONTROL         "Spin1",IDC_G1_PEERS_SPIN,"msctls_updown32",UDS_SETBUDDYINT | UDS_ALIGNRIGHT | UDS_AUTOBUDDY | UDS_ARROWKEYS | UDS_NOTHOUSANDS,266,137,8,12
-    GROUPBOX        "&Link Compression:",IDC_STATIC,5,172,270,33,WS_GROUP
     CONTROL         "Hub to Leaf",IDC_DEFLATE_HUB2LEAF,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,15,183,80,17
     CONTROL         "Leaf to Hub",IDC_DEFLATE_LEAF2HUB,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,100,183,80,17
     CONTROL         "Hub to Hub",IDC_DEFLATE_HUB2HUB,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,185,183,80,17
+    GROUPBOX        "Gnutella2 Network:",IDC_STATIC,7,13,131,60,WS_GROUP
+    LTEXT           "Mode: ",IDC_STATIC,16,56,55,8,0,WS_EX_RIGHT
+    GROUPBOX        "G&2 Connections:",IDC_STATIC,7,84,131,75,WS_GROUP
+    LTEXT           "Leaf to Hub:",IDC_STATIC,18,95,65,12,SS_CENTERIMAGE
+    LTEXT           "Hub to Leaf:",IDC_STATIC,18,116,65,12,SS_CENTERIMAGE
+    LTEXT           "Hub to Hub:",IDC_STATIC,18,137,65,12,SS_CENTERIMAGE
+    GROUPBOX        "Gnutella1 Network:",IDC_STATIC,142,13,133,60,WS_GROUP
+    LTEXT           "Mode: ",IDC_STATIC,150,55,56,8,0,WS_EX_RIGHT
+    GROUPBOX        "G&1 Connections:",IDC_STATIC,142,84,133,75,WS_GROUP
+    LTEXT           "Leaf to Ultrapeer:",IDC_STATIC,160,95,65,12,SS_CENTERIMAGE
+    LTEXT           "Ultrapeer to Leaf:",IDC_STATIC,160,116,65,12,SS_CENTERIMAGE
+    LTEXT           "Peer to Peer:",IDC_STATIC,160,137,65,12,SS_CENTERIMAGE
+    GROUPBOX        "&Link Compression:",IDC_STATIC,5,172,270,33,WS_GROUP
 END
 
 IDD_SETTINGS_ADVANCED DIALOGEX 0, 0, 282, 220
